syntax = "proto3";

package bastionlab_conversion;
import "bastionlab.proto";

message ToDataFrame {
    repeated string inputs_col_names = 1;
    string labels_col_name = 2;
    string inputs_conv_fn = 3;
    string labels_conv_fn = 4;
    string identifier = 5;
}

message RemoteArray {
    string identifier = 1;
}

message RemoteDataFrame {
    string identifier = 1;
}

message RemoteArrays {
    repeated RemoteArray list = 1;
}
message ToArray {
    string identifier = 1;
    int32 add_special_tokens = 2;
    string model = 3;
    string config = 4;
}

service ConversionService {
    rpc ConvToTensor(RemoteArray) returns (bastionlab.Reference) {}
    rpc TokenizeDataFrame(ToArray) returns (RemoteArrays) {}
    rpc ConvToArray(RemoteDataFrame) returns (RemoteArray) {}
}